# intel_diff_gaussian_rasterization

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_wheel.sh  pyproject.toml  rasterize_points.cpp  run_with_torch_libs.sh  setup.py  setup_env.sh  test_rasterizer.py
intel_diff_gaussian_rasterization/: __init__.py
sycl_rasterizer/: auxiliary.h  config.h  forward.dp.cpp  forward.h  rasterizer.h  rasterizer_impl.dp.cpp  render.dp.cpp
