[build-system]
requires = [
    "setuptools>=61.0",
    "torch>=2.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "intel_diff_gaussian_rasterization"
version = "0.1.0"
description = "Intel XPU Gaussian Rasterization for 3D Gaussian Splatting"
authors = [{ email = "williamkengere231670@daystar.ac.ke"}, {name = "William Obino"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
]
keywords = ["gaussian-splatting", "3d-rendering", "intel-arc", "xpu", "sycl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
xpu = [
    "torch>=2.8.0",
]

[project.urls]
Homepage = "https://github.com/andomeder/intel-diff-gaussian-rasterization"
Repository = "https://github.com/andomeder/intel-diff-gaussian-rasterization"
"Bug Tracker" = "https://github.com/andomeder/intel-diff-gaussian-rasterization/issues"

[tool.setuptools]
packages = ["intel_diff_gaussian_rasterization"]
package-data = {"intel_diff_gaussian_rasterization" = ["*.so"]}
include-package-data = true

